[gd_scene load_steps=2 format=3 uid="uid://dtwfejpx0siil"]

[ext_resource type="Script" uid="uid://bj5s2xuebkqfs" path="res://Scripts/TattooShopItem.gd" id="1_r2uij"]

[node name="TattooShopItem" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_r2uij")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 48.0

[node name="CostLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 48.0

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 48.0
